--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,114 @@
     <title>HTML Academy: Пинк</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-img" src="#" width="" height="" alt="Приложение Pink">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button" aria-label="Открыть меню"></button>
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link">Главная</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="photo.html">Фотографии</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html">Конкурс</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">HTML Academy</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="page-main">
+      <h1 class="visually-hidden"></h1>
+      <section class="download">
+        <button class="download__btn loading-btn" type="button"></button>
+        <figure>
+          <ul class="download__list loading__list">
+            <li class="loading__item">
+              <a class="loading__link loading__link--apple" href="#"></a>
+            </li>
+            <li class="loading__item">
+              <a class="loading__link loading__link--android" href="#"></a>
+            </li>
+            <li class="loading__item">
+              <a class="loading__link loading__link--windows" href="#"></a>
+            </li>
+          </ul>
+          <figcaption class="download__title">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</figcaption>
+        </figure>
+      </section>
+      <section class="features">
+        <h1 class="features__title">Устали от серости мегаполиса?</h1>
+        <h1 class="features__title">Нам есть, что вам предложить!</h1>
+        <ul class="features__list">
+          <li class="features__item">
+            <h2 class="features__subtitle">Поднимает настроение</h2>
+            <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+          </li>
+          <li class="features__item">
+            <h2 class="features__subtitle">Меняет мир вокруг</h2>
+            <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+          </li>
+          <li class="features__item">
+            <h2 class="features__subtitle">Заводит новых друзей</h2>
+            <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+          </li>
+        </ul>
+        <img class="features__img" src="#" width="" height="" alt="Приложение Pink">
+      </section>
+      <section class="reviews">
+        <ul class="reviews__list slider__list">
+          <li class="reviws__item slider__item">
+            <b>Николай Петров</b>
+            <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </li>
+        </ul>
+        <p class="reviews__toggles slider__toggles">
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+        </p>
+      </section>
+      <section class="price">
+        <ul class="price__list">
+          <li class="price__item price__item--hit">
+            <span class="">хит</span>
+            <b class="">Стандарт</b>
+            <p class="">3,99 USD</p>
+          </li>
+          <li class="price__item">Розовый фильтр</li>
+          <li class="price__item">Смайлики</li>
+          <li class="price__item">Комментарии</li>
+        </ul>
+        <p class="price__toggles slider__toggles">
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+        </p>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="map"></section>
+      <h3>Остались вопросы? Свяжитесь с нами!</h3>
+      <ul class="page-footer__list">
+        <li class="page-footer__item">
+          <b>Звоните:</b>
+          <p>+7 (812) 555-66-66</p>
+        </li>
+        <li class="page-footer__item">
+          <b>Пишите:</b>
+          <p>mail@htmlacademy.ru</p>
+        </li>
+        <li class="page-footer__item">
+          <b>Приезжайте в гости:</b>
+          <p>ул. БольшаяКонюшенная, 19/8</p>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
