--- a/source/index.html
+++ b/source/index.html
@@ -29,16 +29,16 @@
     </header>
     <main class="page-main">
       <section class="download">
-        <button class="download__btn btn" type="button">Скачать приложение</button>
+        <a class="download__btn btn" href="#">Скачать приложение</a>
         <ul class="download__list">
           <li class="download__item">
-            <a class="download__link download__link--apple" href="#"></a>
+            <a class="download__link download__link--apple" href="#" aria-label="apple"></a>
           </li>
           <li class="download__item">
-            <a class="download__link download__link--android" href="#"></a>
+            <a class="download__link download__link--android" href="#" aria-label="android"></a>
           </li>
           <li class="download__item">
-            <a class="download__link download__link--windows" href="#"></a>
+            <a class="download__link download__link--windows" href="#" aria-label="windows"></a>
           </li>
         </ul>
           <p class="download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
@@ -48,19 +48,18 @@
         <p class="features__slogan">Нам есть, что вам предложить!</p>
         <ul class="features__list">
           <li class="features__item">
-            <p class="features__title">Поднимает настроение</p>
+            <h3 class="features__title">Поднимает настроение</h3>
             <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
           </li>
           <li class="features__item">
-            <p class="features__title">Меняет мир вокруг</p>
+            <h3 class="features__title">Меняет мир вокруг</h3>
             <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
           </li>
           <li class="features__item">
-            <p class="features__title">Заводит новых друзей</p>
+            <h3 class="features__title">Заводит новых друзей</h3>
             <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
           </li>
         </ul>
-        <img class="features__img" src="#" width="" height="" alt="Приложение Pink">
       </section>
       <section class="reviews slider">
         <ul class="reviews__list slider__list">
@@ -78,8 +77,8 @@
       <section class="price slider">
         <table class="price__table">
           <tr class="price__item">
-            <th class="price__title">хит</th>
-            <th class="price__title">Стандарт<br>3,99 USD</th>
+            <div class="price__hit"></div>
+            <th class="price__title">Стандарт 3,99 USD</th>
           </tr>
           <tr class="price__item">
             <td class="price__text">Розовый фильтр</td>
@@ -113,6 +112,9 @@
             <p class="contacts__info">ул. БольшаяКонюшенная, 19/8</p>
           </li>
         </ul>
+        <div class="map">
+          <img class="map_img" src="" width="" height="" alt="">
+        </div>
       </section>
     </main>
   </body>
