--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="page-header">
-      <div class="page-header__wrapper">
+    <div class="page-wrapper">
+      <header class="page-header">
         <a class="page-header__logo">
           <img class="page-header__logo-img" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
         </a>
@@ -28,97 +28,97 @@
             </li>
           </ul>
         </nav>
-      </div>
-    </header>
-    <main class="page-main">
-      <section class="download">
-        <a class="download__btn btn" href="#">Скачать приложение</a>
-        <ul class="download__list">
-          <li class="download__item">
-            <a class="download__link download__link--apple" href="#" aria-label="apple"></a>
-          </li>
-          <li class="download__item">
-            <a class="download__link download__link--android" href="#" aria-label="android"></a>
-          </li>
-          <li class="download__item">
-            <a class="download__link download__link--windows" href="#" aria-label="windows"></a>
-          </li>
-        </ul>
-          <p class="download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-      </section>
-      <section class="features">
-        <p class="features__slogan">Устали от серости мегаполиса?</p>
-        <p class="features__slogan">Нам есть, что вам предложить!</p>
-        <ul class="features__list">
-          <li class="features__item">
-            <h3 class="features__title">Поднимает настроение</h3>
-            <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-          </li>
-          <li class="features__item">
-            <h3 class="features__title">Меняет мир вокруг</h3>
-            <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-          </li>
-          <li class="features__item">
-            <h3 class="features__title">Заводит новых друзей</h3>
-            <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
-          </li>
-        </ul>
-      </section>
-      <section class="reviews slider">
-        <ul class="reviews__list slider__list">
-          <li class="reviws__item slider__item">
-            <b class="reviews__author">Николай Петров</b>
-            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-        </ul>
-        <p class="reviews__toggles slider__toggles">
-          <button class="slider__toggle" type="button"></button>
-          <button class="slider__toggle" type="button"></button>
-          <button class="slider__toggle" type="button"></button>
-        </p>
-      </section>
-      <section class="price slider">
-        <div class="price__hit"></div>
-        <table class="price__table">
-          <tr class="price__item">
-            <th class="price__title">Стандарт 3,99 USD</th>
-          </tr>
-          <tr class="price__item">
-            <td class="price__text">Розовый фильтр</td>
-          </tr>
-          <tr class="price__item">
-            <td class="price__text">Смайлики</td>
-          </tr>
-          <tr class="price__item">
-            <td class="price__text">Комментарии</td>
-          </tr>
-        </table>
-        <p class="price__toggles slider__toggles">
-          <button class="slider__toggle" type="button"></button>
-          <button class="slider__toggle" type="button"></button>
-          <button class="slider__toggle" type="button"></button>
-        </p>
-      </section>
-      <section class="contacts">
-        <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
-        <ul class="contacts__list">
-          <li class="contacts__item">
-            <b class="contacts__text">Звоните:</b>
-            <p class="contacts__info">+7 (812) 555-66-66</p>
-          </li>
-          <li class="contacts__item">
-            <b class="contacts__text">Пишите:</b>
-            <p class="contacts__info">mail@htmlacademy.ru</p>
-          </li>
-          <li class="contacts__item">
-            <b class="contacts__text">Приезжайте в гости:</b>
-            <p class="contacts__info">ул. БольшаяКонюшенная, 19/8</p>
-          </li>
-        </ul>
-        <div class="map">
-          <img class="map_img" src="" width="" height="" alt="">
-        </div>
-      </section>
-    </main>
+      </header>
+      <main class="page-main">
+        <section class="download">
+          <a class="download__btn btn" href="#">Скачать приложение</a>
+          <ul class="download__list">
+            <li class="download__item">
+              <a class="download__link download__link--apple" href="#" aria-label="apple"></a>
+            </li>
+            <li class="download__item">
+              <a class="download__link download__link--android" href="#" aria-label="android"></a>
+            </li>
+            <li class="download__item">
+              <a class="download__link download__link--windows" href="#" aria-label="windows"></a>
+            </li>
+          </ul>
+            <p class="download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </section>
+        <section class="features">
+          <p class="features__slogan">Устали от серости мегаполиса?</p>
+          <p class="features__slogan">Нам есть, что вам предложить!</p>
+          <ul class="features__list">
+            <li class="features__item">
+              <h3 class="features__title">Поднимает настроение</h3>
+              <p class="features__description">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__title">Меняет мир вокруг</h3>
+              <p class="features__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </li>
+            <li class="features__item">
+              <h3 class="features__title">Заводит новых друзей</h3>
+              <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+          </ul>
+        </section>
+        <section class="reviews slider">
+          <ul class="reviews__list slider__list">
+            <li class="reveiws__item slider__item">
+              <b class="reviews__author">Николай Петров</b>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </li>
+          </ul>
+          <p class="reviews__toggles slider__toggles">
+            <button class="slider__toggle" type="button"></button>
+            <button class="slider__toggle" type="button"></button>
+            <button class="slider__toggle" type="button"></button>
+          </p>
+        </section>
+        <section class="price slider">
+          <div class="price__hit"></div>
+          <table class="price__table">
+            <tr class="price__item">
+              <th class="price__title">Стандарт 3,99 USD</th>
+            </tr>
+            <tr class="price__item">
+              <td class="price__text">Розовый фильтр</td>
+            </tr>
+            <tr class="price__item">
+              <td class="price__text">Смайлики</td>
+            </tr>
+            <tr class="price__item">
+              <td class="price__text">Комментарии</td>
+            </tr>
+          </table>
+          <p class="price__toggles slider__toggles">
+            <button class="slider__toggle" type="button"></button>
+            <button class="slider__toggle" type="button"></button>
+            <button class="slider__toggle" type="button"></button>
+          </p>
+        </section>
+        <section class="contacts">
+          <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <b class="contacts__text">Звоните:</b>
+              <p class="contacts__info">+7 (812) 555-66-66</p>
+            </li>
+            <li class="contacts__item">
+              <b class="contacts__text">Пишите:</b>
+              <p class="contacts__info">mail@htmlacademy.ru</p>
+            </li>
+            <li class="contacts__item">
+              <b class="contacts__text">Приезжайте в гости:</b>
+              <p class="contacts__info">ул. БольшаяКонюшенная, 19/8</p>
+            </li>
+          </ul>
+          <div class="map">
+            <img class="map_img" src="" width="" height="" alt="">
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
