--- a/source/photo.html
+++ b/source/photo.html
@@ -15,6 +15,11 @@
         <nav class="main-nav">
           <button class="main-nav__toggle" type="button" aria-label="Открыть меню"></button>
           <ul class="main-nav__list">
+            <li class="main-nav__item main-nav__item--top">
+              <a class="main-nav__link main-nav__link--top" main-nav__link href="#">
+                <img class="page-header__logo-img" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
+              </a>
+            </li>
             <li class="main-nav__item">
               <a class="main-nav__link" href="index.html">Главная</a>
             </li>
@@ -29,10 +34,10 @@
             </li>
           </ul>
         </nav>
-        <h1 class="page-header__title">Фотографии пользователей</h1>
       </div>
     </header>
       <main class="page-main">
+        <h1 class="page-main__title page-main__title--photo">Фотографии пользователей</h1>
         <section class="gallery">
           <p class="gallery__text">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</p>
           <article class="photo photo--wide">
