--- a/source/form.html
+++ b/source/form.html
@@ -15,6 +15,11 @@
         <nav class="main-nav">
           <button class="main-nav__toggle" type="button" aria-label="Открыть меню"></button>
           <ul class="main-nav__list">
+            <li class="main-nav__item main-nav__item--top">
+              <a class="main-nav__link main-nav__link--top" main-nav__link href="#">
+                <img class="page-header__logo-img" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
+              </a>
+            </li>
             <li class="main-nav__item">
               <a class="main-nav__link" href="index.html">Главная</a>
             </li>
@@ -29,14 +34,14 @@
             </li>
           </ul>
         </nav>
-        <h1 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
     </header>
     <main class="page-main">
+      <h1 class="page-main__title page-main__title--form">Конкурс на самое безбашенное путешествие с Пинк</h1>
       <form class="page-form" method="post" action="https://echo.htmlacademy.ru">
         <p class="page-form__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
         <div class="page-form__wrapper">
-          <fieldset class="form-group">
+          <div class="form-group">
             <label class="field-text">
               <span class="field-text__label">Фамилия:</span>
               <input class="field-text__input" type="text" name="name" placeholder="Укажите фамилию *">
@@ -49,9 +54,9 @@
               <span class="field-text__label">Отчество:</span>
               <input class="field-text__input" type="text" name="name" placeholder="Ну и отчество тоже">
             </label>
-          </fieldset>
-          <fieldset class="form-group form-group--bg-grey">
-            <legend class="form-group__title">Ваши безбашенные достижения в путешествии</legend>
+          </div>
+          <div class="form-group form-group--bg-grey">
+            <p class="form-group__title">Ваши безбашенные достижения в путешествии</p>
             <label class="field-checkbox">
               <span class="field-checkbox__label">Сделал селфи с акулой</span>
               <input class="field-checkbox__input visually-hidden" type="checkbox" name="Сделал селфи с акулой">
@@ -76,8 +81,9 @@
               <span class="field-checkbox__label">Разгромил отель</span>
               <input class="field-checkbox__input visually-hidden" type="checkbox" name="Разгромил отель">
             </label>
-          </fieldset>
-          <fieldset class="form-group">
+          </div>
+          <div class="form-group">
+            <p class="form-group__title">Контактная информация</p>
             <label class="field-text">
               <span class="field-text__label">Номер телефона</span>
               <input class="field-text__input" type="tel" name="tel" placeholder="Номер, пожалуйста">
@@ -86,9 +92,9 @@
               <span class="field-text__label">Адрес почты</span>
               <input class="field-text__input" type="email" name="email" placeholder="Введите почту *">
             </label>
-          </fieldset>
-          <fieldset class="form-group form-group--bg-grey">
-            <legend class="form-group__title">С каким приложением путешествовали?</legend>
+          </div>
+          <div class="form-group form-group--bg-grey">
+            <p class="form-group__title">С каким приложением путешествовали?</p>
             <label class="field-radio">
               <span class="field-radio__label">Pink для iOS</span>
               <input class="field-radio__input visually-hidden" type="radio" name="app">
@@ -101,11 +107,11 @@
               <span class="field-radio__label">Windows Phone</span>
               <input class="field-radio__input visually-hidden" type="radio" name="app">
             </label>
-          </fieldset>
-          <fieldset class="form-group">
-            <legend class="form-group__title">Опишите свои эмоции</legend>
+          </div>
+          <div class="form-group">
+            <p class="form-group__title">Опишите свои эмоции</p>
             <textarea class="field-textarea" rows="5" name="message" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-          </fieldset>
+          </div>
         </div>
         <div class="page-form__wrapper-bottom">
           <button class="field-action btn" type="submit">Отправить форму</button>
