--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
           <button class="main-nav__toggle" type="button" aria-label="Открыть меню"></button>
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--top">
-              <a class="main-nav__link main-nav__link--top" main-nav__link href="#">
+              <a class="main-nav__link main-nav__link--top" href="#">
                 <img class="page-header__logo-img" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
               </a>
             </li>
